--- a/index.html
+++ b/index.html
@@ -28,21 +28,21 @@
             var isAndroid = /Android/i.test(navigator.userAgent);
             var isIOS = /iPhone|iPad|iPod/i.test(navigator.userAgent);
 
-            if (isAndroid) {
-                //이유는 알 수 없지만 intent로 할떄 오류가 생김. 일단, 다른방식으로 구현해두고  오류 원인 찾아 수정하면 바꿀예정
-                // window.location.href = "intent://" + appUrlForAos + "#Intent;scheme=com.dangpro;package=com.dangpro;";
-                window.location.href = "intent://" + "dangpro/" + inAppRoute + "#Intent;scheme=com.dangpro;package=com.dangpro;end;";
-                // window.location.href = androidStoreUrl;  // Android 사용자에게 플레이스토어로 이동
-                setTimeout(function () {
-                    // window.location.href = appUrlForAos;
-                }, 200);
-            } else if (isIOS) {
-                //ios에서는   app 실행을 먼저 묻기 때문에 지연시간 좀더 길게 줘야한다.
-                window.location.href = appUrlForIos;
-                setTimeout(function () {
-                    window.location.href = iosStoreUrl;
-                }, 3000);
-            }
+            // if (isAndroid) {
+            //     //이유는 알 수 없지만 intent로 할떄 오류가 생김. 일단, 다른방식으로 구현해두고  오류 원인 찾아 수정하면 바꿀예정
+            //     // window.location.href = "intent://" + appUrlForAos + "#Intent;scheme=com.dangpro;package=com.dangpro;";
+            //     window.location.href = "intent://" + "dangpro/" + inAppRoute + "#Intent;scheme=com.dangpro;package=com.dangpro;end;";
+            //     // window.location.href = androidStoreUrl;  // Android 사용자에게 플레이스토어로 이동
+            //     setTimeout(function () {
+            //         // window.location.href = appUrlForAos;
+            //     }, 200);
+            // } else if (isIOS) {
+            //     //ios에서는   app 실행을 먼저 묻기 때문에 지연시간 좀더 길게 줘야한다.
+            //     window.location.href = appUrlForIos;
+            //     setTimeout(function () {
+            //         window.location.href = iosStoreUrl;
+            //     }, 3000);
+            // }
         });
     </script>
 </head>
